# ll-video-maker

./: .env.example  .gitignore  CLAUDE.md  TODOS.md  langchain-session.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: ratify-rules.instructions.md  script-format.instructions.md
.github/prompts/: new-agent.prompt.md
docs/: design.md  encoding-fix.md  langchain-session.md  langchain-skills.md
docs/plans/: autonomous-feature-loop.md
docs/superpowers/specs/: 2026-04-19-langsmith-eval-design.md
src/ll_video_maker/: __init__.py  config.py  llm.py  main.py  producer.py  state.py  task_context.py  tracing.py
src/ll_video_maker/agents/: __init__.py  evaluator.py  researcher.py  scriptwriter.py  shared.py
src/ll_video_maker/middleware/: __init__.py  ratify_l1.py
src/ll_video_maker/prompts/: __init__.py  evaluator.md  producer.md  researcher.md  scriptwriter.md
src/ll_video_maker/validators/: __init__.py  evaluator_precheck.py  script_contract.py  (+2 more)
tests/: conftest.py  test_agent_prompts_externalized.py  test_config_evaluator_model.py  test_contract_key_topics_robustness.py  test_evaluator_precheck.py  test_producer_evaluator_state_from_files.py  test_producer_milestone_state_machine.py  test_producer_precheck_short_circuit.py  test_producer_tracing_config.py  test_ratify_failed_state_machine.py  test_researcher_parallel_search.py  test_script_contract_validator.py  test_script_plan_consistency_validator.py  test_script_plan_validator.py  test_scriptwriter_prompt_integrity.py  test_task_context.py  test_validate_script_artifacts.py
