[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ll-video-maker"
version = "0.1.0"
description = "视频脚本自动生产 pipeline — research + script（LangChain 1.0）"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.3.0",
    "langsmith>=0.2.0",
    "anthropic>=0.50.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
postgres = ["langgraph-checkpoint-postgres>=2.0.0", "psycopg[binary]>=3.2.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
video-maker = "ll_video_maker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ll_video_maker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
